pw list creation and calling in store added

--- a/src/windows/storage-window/storage-window.html
+++ b/src/windows/storage-window/storage-window.html
@@ -25,7 +25,9 @@
         class="bg-gray-200 my-3 p-3 rounded-lg shadow-lg max-w-2xl mx-auto"
       >
         <h2 class="text-md mb-3 font-extrabold">Stored Passwords:</h2>
-        <ul id="list" class="list-none p-0 font-normal"></ul>
+        <ul id="list" class="list-none p-0 font-normal">
+          <!-- Password items will be dynamically added here -->
+        </ul>
         <button
           id="add-password-button"
           class="w-full font-bold bg-purple-700 text-white py-1 px-4 rounded-md mb-3 hover:bg-purple-600 transition-colors duration-200"
