--- a/src/windows/editPassword-window/editPassword-window.html
+++ b/src/windows/editPassword-window/editPassword-window.html
@@ -24,15 +24,26 @@
         id="edit-password"
         class="flex-1 p-3 bg-gray-200 my-3 rounded-lg shadow-lg text-sm"
       >
-        <h2 class="text-xs mb-2 font-extrabold">Edit Password:</h2>
+        <h2 class="text-xs mb-4 font-extrabold">Edit Password:</h2>
         <form id="edit-password-form">
+          <label
+            for="edit-username"
+            class="block text-gray-700 text-xs font-bold mb-1"
+            >Username or Email:</label
+          >
           <input
             type="text"
             id="edit-username"
-            class="w-full p-1 mt-2 mb-1 border border-gray-300 rounded-md box-border text-xs"
+            class="w-full p-1 mb-2 border border-gray-300 rounded-md box-border text-xs"
             placeholder="Username or Email*"
             value=""
           />
+
+          <label
+            for="edit-password"
+            class="block text-gray-700 text-xs font-bold"
+            >Password:</label
+          >
           <div class="password-container flex flex-col items-start">
             <input
               type="password"
@@ -60,6 +71,12 @@
               </button>
             </div>
           </div>
+
+          <label
+            for="edit-website"
+            class="block text-gray-700 text-xs font-bold mt-2"
+            >Website URL:</label
+          >
           <input
             type="text"
             id="edit-website"
@@ -67,6 +84,12 @@
             placeholder="Website URL (optional)"
             value=""
           />
+
+          <label
+            for="edit-description"
+            class="block text-gray-700 text-xs font-bold mt-1"
+            >Description:</label
+          >
           <input
             type="text"
             id="edit-description"
@@ -74,6 +97,7 @@
             placeholder="Description (optional)"
             value=""
           />
+
           <button
             type="submit"
             class="w-full bg-purple-700 text-white text-xs border-none font-bold cursor-pointer hover:bg-purple-600 p-1 rounded-md mt-1"
