--- a/src/windows/newPassword-window/newPassword-window.html
+++ b/src/windows/newPassword-window/newPassword-window.html
@@ -24,23 +24,34 @@
         id="add-password"
         class="flex-1 p-3 bg-gray-200 my-3 rounded-lg shadow-lg text-sm font-bold"
       >
-        <h2 class="text-xs mb-2 font-extrabold">New Password:</h2>
+        <h2 class="text-xs mb-4 font-extrabold">New Password:</h2>
         <form id="password-form">
+          <label
+            for="username"
+            class="block text-gray-700 text-xs font-bold mb-1"
+            >Username or Email:</label
+          >
           <input
             type="text"
             id="username"
-            class="w-full p-1 mt-2 mb-1 border border-gray-300 rounded-md box-border text-xs"
+            class="w-full p-1 mb-2 border border-gray-300 rounded-md box-border text-xs"
             placeholder="Username or Email*"
           />
+
+          <label
+            for="password"
+            class="block text-gray-700 text-xs font-bold mb-1"
+            >Password:</label
+          >
           <div class="password-container flex flex-col items-start">
             <input
               type="password"
               id="password"
-              class="w-full p-1 my-1 border border-gray-300 rounded-md box-border text-xs"
+              class="w-full p-1 mb-1 border border-gray-300 rounded-md box-border text-xs"
               placeholder="Password*"
             />
             <div
-              class="password-buttons flex justify-between w-full gap-2 my-1"
+              class="password-buttons flex justify-between w-full gap-1 mb-2"
             >
               <button
                 type="button"
@@ -58,26 +69,39 @@
               </button>
             </div>
           </div>
+
+          <label
+            for="website"
+            class="block text-gray-700 text-xs font-bold mb-1"
+            >Website URL:</label
+          >
           <input
             type="text"
             id="website"
-            class="w-full p-1 my-1 border border-gray-300 rounded-md box-border text-xs"
+            class="w-full p-1 mb-2 border border-gray-300 rounded-md box-border text-xs"
             placeholder="Website URL (optional)"
           />
+
+          <label
+            for="description"
+            class="block text-gray-700 text-xs font-bold mb-1"
+            >Description:</label
+          >
           <input
             type="text"
             id="description"
-            class="w-full p-1 my-1 border border-gray-300 rounded-md box-border text-xs"
+            class="w-full p-1 mb-2 border border-gray-300 rounded-md box-border text-xs"
             placeholder="Description (optional)"
           />
+
           <button
             type="submit"
-            class="w-full bg-purple-700 text-white text-xs font-bold border-none cursor-pointer hover:bg-purple-600 p-1 rounded-md mt-1"
+            class="w-full bg-purple-700 text-white text-xs font-bold border-none cursor-pointer hover:bg-purple-600 p-1 rounded-md mb-1"
           >
             Add
           </button>
         </form>
-        <div class="return-button-container mt-2 flex justify-center">
+        <div class="return-button-container mt-1 flex justify-center">
           <button
             id="return-button"
             class="bg-red-600 text-white border-none cursor-pointer font-bold text-xs w-full hover:bg-red-500 p-1 rounded-md"
