--- a/src/windows/newList-window/newList-window.html
+++ b/src/windows/newList-window/newList-window.html
@@ -45,7 +45,7 @@
               placeholder="Enter password..."
             />
             <button
-              id="show-password"
+              id="show-list-password"
               class="bg-purple-700 font-bold text-white p-1 rounded-r-md hover:bg-purple-600 transition-colors duration-200"
             >
               Show
@@ -55,16 +55,23 @@
 
         <div class="mb-2">
           <label class="font-bold text-xs mb-1 block">Repeat password:</label>
-          <input
-            type="password"
-            id="repeat-password"
-            class="w-full p-1 border border-gray-300 rounded-md mb-2"
-            placeholder="Repeat password..."
+          <div class="flex">
+            <input
+              type="password"
+              id="repeat-password"
+              class="flex-grow p-1 border border-gray-300 rounded-l-md"
+              placeholder="Repeat password..."
           />
+          <button
+      id="show-repeat-password"
+      class="bg-purple-700 font-bold text-white p-1 rounded-r-md hover:bg-purple-600 transition-colors duration-200"
+    >
+      Show
+    </button>
         </div>
 
         <div class="mb-3">
-          <label class="font-bold text-xs mb-1 block">Email for Backup:</label>
+          <label class="font-bold text-xs mb-1 mt-2 block">Email for Backup:</label>
           <input
             type="email"
             id="backup-email"
@@ -75,7 +82,7 @@
 
         <button
           id="create-list"
-          class="w-full bg-purple-700 text-white font-bold p-1 rounded-md hover:bg-purple-600 transition-colors duration-200"
+          class="w-full mt-1 bg-purple-700 text-white font-bold p-1 rounded-md hover:bg-purple-600 transition-colors duration-200"
         >
           Create
         </button>
