--- a/src/windows/newList-window/newList-window.html
+++ b/src/windows/newList-window/newList-window.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="mb-3">
-          <label class="font-bold text-xs mb-1 mt-2 block">Email for Backup:</label>
+          <label class="font-bold text-xs mb-1 mt-3 block">Email for Backup:</label>
           <input
             type="email"
             id="backup-email"
@@ -89,7 +89,7 @@
         <div class="mt-2 flex justify-center">
           <button
             id="return-button"
-            class="bg-red-600 w-full text-white border-none cursor-pointer font-medium hover:bg-red-500 p-1 rounded-md"
+            class="bg-red-600 w-full text-white border-none cursor-pointer font-bold hover:bg-red-500 p-1 rounded-md"
           >
             Return
           </button>
