--- a/src/windows/editPassword-window/editPassword-window.html
+++ b/src/windows/editPassword-window/editPassword-window.html
@@ -24,7 +24,7 @@
         id="edit-password"
         class="flex-1 p-3 bg-gray-200 my-3 rounded-lg shadow-lg text-sm"
       >
-        <h2 class="text-xs mb-4 font-extrabold">Edit Password:</h2>
+        <h2 class="text-lg mb-4 font-bold text-purple-700">Edit Password:</h2>
         <form id="edit-password-form">
           <label
             for="edit-username"
