--- a/src/windows/newList-window/newList-window.html
+++ b/src/windows/newList-window/newList-window.html
@@ -24,8 +24,8 @@
         id="new-list-section"
         class="bg-gray-200 my-3 p-3 rounded-lg shadow-lg max-w-2xl mx-auto"
       >
-        <h2 class="text-md mb-5 font-extrabold">Create new list:</h2>
-        <div>
+      <h2 class="text-lg mb-4 font-bold text-purple-700">Create new list:</h2>
+              <div>
           <label class="font-bold text-xs mb-2 block">Name of the list:</label>
           <input
             type="text"
@@ -71,7 +71,7 @@
         </div>
 
         <div class="mb-3">
-          <label class="font-bold text-xs mb-1 mt-2 block">Email for Backup:</label>
+          <label class="font-bold text-xs mb-1 mt-3 block">Email for Backup:</label>
           <input
             type="email"
             id="backup-email"
