--- a/src/windows/newPassword-window/newPassword-window.html
+++ b/src/windows/newPassword-window/newPassword-window.html
@@ -24,7 +24,7 @@
         id="add-password"
         class="flex-1 p-3 bg-gray-200 my-3 rounded-lg shadow-lg text-sm font-bold"
       >
-        <h2 class="text-xs mb-4 font-extrabold">New Password:</h2>
+        <h2 class="text-lg mb-4 font-bold text-purple-700">New Password:</h2>
         <form id="password-form">
           <label
             for="username"
