--- a/src/windows/welcome-window/welcome-window.html
+++ b/src/windows/welcome-window/welcome-window.html
@@ -24,13 +24,13 @@
         class="bg-gray-200 my-3 p-3 rounded-lg shadow-lg max-w-2xl mx-auto"
       >
         <div class="mb-3">
-          <label class="font-extrabold text-md mb-2 block"
+          <label class="text-lg mb-4 font-bold text-purple-700"
             >Password list:</label
           >
           <input
             type="text"
             id="file-path"
-            class="w-full p-1 border border-gray-300 rounded-md mb-3"
+            class="w-full p-1 border border-gray-300 rounded-md mb-3 mt-3"
             placeholder="Path to CSV file..."
             readonly
           />
@@ -43,11 +43,11 @@
         </div>
 
         <div class="mb-3">
-          <label class="font-extrabold text-md mb-2 block">Password:</label>
+          <label class="text-lg mb-4 font-bold text-purple-700">Password:</label>
           <input
             type="password"
             id="list-password"
-            class="w-full p-1 border border-gray-300 rounded-md"
+            class="w-full p-1 border border-gray-300 rounded-md mt-3"
             placeholder="Enter password..."
           />
         </div>
