--- a/src/windows/storage-window/storage-window.html
+++ b/src/windows/storage-window/storage-window.html
@@ -24,7 +24,9 @@
         id="password-list"
         class="bg-gray-200 my-3 p-3 rounded-lg shadow-lg max-w-2xl mx-auto"
       >
-        <h2 class="text-lg mb-4 font-bold text-purple-700">Stored Passwords:</h2>
+        <h2 class="text-lg mb-4 font-bold text-purple-700">
+          Stored Passwords:
+        </h2>
         <div class="max-h-72 overflow-y-auto pr-2">
           <ul id="list" class="list-none p-0 font-normal box-border">
             <!-- Password items will be dynamically added here -->
