--- a/src/windows/welcome-window/welcome-window.html
+++ b/src/windows/welcome-window/welcome-window.html
@@ -7,10 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="./welcome-window.css"
-    />
+    <link rel="stylesheet" href="./welcome-window.css" />
   </head>
   <body
     class="font-roboto text-xs m-0 p-0 bg-gray-100 text-gray-800 flex flex-col h-screen"
@@ -80,13 +77,12 @@
       </section>
       <div class="flex justify-center mt-6">
         <img
-  src="../../assets/images/Kagi-Chikaku-Lite-Logo-OriDesign.jpg"
-  alt="Kagi-Chikaku-Lite Logo"
-  width="110"
-  height="110"
-  class="rounded-full logo-animation"
-/>
-
+          src="../../assets/images/Kagi-Chikaku-Lite-Logo-OriDesign.jpg"
+          alt="Kagi-Chikaku-Lite Logo"
+          width="110"
+          height="110"
+          class="rounded-full logo-animation"
+        />
       </div>
     </main>
 
